--- a/style/base/_variables.scss
+++ b/style/base/_variables.scss
@@ -1,11 +1,13 @@
 // COLORS
-$primary-color: #36d1dc;
-$secondary-color: #5b86e5;
+$primary-color: #141E30;
+$secondary-color: #26446b; //#243B55
+$tertiary-color: #66d3de; //#92DCE5
+$additional-color: #E6AF2E;
 $font-family: "Montserrat", sans-serif;
 
 $light-white: #e5e5e5;
 $white-color: #ffffff;
-$dark-grey: #333333;
+$dark-grey: #1e1e1e;
 
 $dark-blue-text: #272341; // For headings
 
