--- a/style/sections/_projects.scss
+++ b/style/sections/_projects.scss
@@ -17,6 +17,10 @@
       margin-bottom: 0rem;
     }
 
+    ul {
+      margin-top: -2rem;
+    }
+
     .row {
       margin: 0;
       margin-bottom: 8rem;
