--- a/style/base/_typography.scss
+++ b/style/base/_typography.scss
@@ -10,17 +10,21 @@ ul{
   font-size: $default-font-size;
 }
 
+ul {
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+}
+
 ul li {
   list-style: none;
   position: relative;
-  padding: 6px 0 2px 25px;
+  padding: 5px 0 5px 25px;
 }
 
 ul li::before {
   content: '-';
   position: absolute;
-  top: 6px;
-  left: 0;
+  left: 10px;
 }
 
 a {
