--- a/style/sections/_about.scss
+++ b/style/sections/_about.scss
@@ -47,7 +47,7 @@
       height: 100%;
       justify-content: center;
       flex-direction: column;
-      text-align: left;
+      text-align: justify;
       @include respond(tab-port-sm) {
         align-items: center;
         text-align: center;
