--- a/style/sections/_projects.scss
+++ b/style/sections/_projects.scss
@@ -17,21 +17,17 @@
       margin-bottom: 0rem;
     }
 
-    ul {
-      margin-top: -2rem;
-    }
-
     .row {
       margin: 0;
-      margin-bottom: 8rem;
+      margin-bottom: 2rem;
       @include respond(phone) {
-        margin-bottom: 4rem;
+        margin-bottom: 1rem;
       }
     }
 
     &__text {
       width: 100%;
-      text-align: left;
+      text-align: justify;
       @include respond(tab-land) {
         margin-bottom: 4.8rem;
       }
@@ -50,7 +46,7 @@
       }
 
       &-info {
-        margin-bottom: 1.5rem;
+
       }
 
       &-btns {
@@ -58,12 +54,13 @@
         display: flex;
         align-items: center;
         flex-wrap: wrap;
+        margin-top: 2rem;
       }
     }
 
     &__image {
       width: 90%;
-      margin: 0 auto;
+      margin: 55px auto;
 
       @include respond(tab-land) {
         width: 100%;
