--- a/style/main.css
+++ b/style/main.css
@@ -43,7 +43,7 @@ ul {
 ul li {
   list-style: none;
   position: relative;
-  padding: 5px 0 5px 25px;
+  padding: 0px 0 5px 25px;
 }
 
 ul li::before {
@@ -96,6 +96,10 @@ a:hover {
     -webkit-text-fill-color: #ffffff;
     box-shadow: none;
   }
+}
+
+.bolded {
+  font-weight: bold;
 }
 
 /* Call to Action Button*/
