--- a/style/main.css
+++ b/style/main.css
@@ -676,7 +676,7 @@ section .row span {
 }
 #projects .project-wrapper .row {
   margin: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 7rem;
 }
 @media (max-width: 37.5em) {
   #projects .project-wrapper .row {
@@ -716,7 +716,7 @@ section .row span {
 }
 #projects .project-wrapper__image {
   width: 90%;
-  margin: 55px auto;
+  margin: auto;
 }
 @media (max-width: 75em) {
   #projects .project-wrapper__image {
